ajout du coeur et modif animation

--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
                 <p>Ménilmontant</p>
               </div>
               <div class="heart">
-                <i class="far fa-heart"></i>
+                <i class="coeur1 far fa-heart"></i>
+                <i class="coeur2 fas fa-heart"></i>
               </div>
               <p class="stickers">Nouveau</p>
             </div>
@@ -78,7 +79,8 @@
                 <p>Ménilmontant</p>
               </div>
               <div class="heart">
-                <i class="far fa-heart"></i>
+                <i class="coeur1 far fa-heart"></i>
+                <i class="coeur2 fas fa-heart"></i>
               </div>
               <p class="stickers">Nouveau</p>
             </div>
@@ -94,7 +96,8 @@
                 <p>Ménilmontant</p>
               </div>
               <div class="heart">
-                <i class="far fa-heart"></i>
+                <i class="coeur1 far fa-heart"></i>
+                <i class="coeur2 fas fa-heart"></i>
               </div>
             </div>
           </a>
@@ -109,7 +112,8 @@
                 <p>Ménilmontant</p>
               </div>
               <div class="heart">
-                <i class="far fa-heart"></i>
+                <i class="coeur1 far fa-heart"></i>
+                <i class="coeur2 fas fa-heart"></i>
               </div>
             </div>
           </a>
