--- a/template.html
+++ b/template.html
@@ -31,7 +31,10 @@
     <main id="main-page2">
       <div class="title-restaurant">
         <h2>La palette du goût</h2>
-        <div class="heart"><i class="far fa-heart"></i></div>
+        <div class="heart">
+          <i class="coeur1 far fa-heart"></i>
+          <i class="coeur2 fas fa-heart"></i>
+        </div>
       </div>
       <section id="starter" class="menu">
         <h3 class="upercase">Entrées</h3>
