--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div class="section">
-      <div class="loader loader-quart"></div>
+      <div class="loader loader-circle"></div>
     </div>
     <header>
       <h1>ohmyfood</h1>
@@ -62,8 +62,11 @@
                 <p>Ménilmontant</p>
               </div>
               <div class="heart">
-                <i class="coeur1 far fa-heart"></i>
-                <i class="coeur2 fas fa-heart"></i>
+                <label>
+                  <input type="checkbox" name="" />
+                  <i class="coeur1 far fa-heart"></i>
+                  <i class="coeur2 fas fa-heart"></i>
+                </label>
               </div>
               <p class="stickers">Nouveau</p>
             </div>
@@ -79,8 +82,11 @@
                 <p>Ménilmontant</p>
               </div>
               <div class="heart">
-                <i class="coeur1 far fa-heart"></i>
-                <i class="coeur2 fas fa-heart"></i>
+                <label>
+                  <input type="checkbox" name="" />
+                  <i class="coeur1 far fa-heart"></i>
+                  <i class="coeur2 fas fa-heart"></i>
+                </label>
               </div>
               <p class="stickers">Nouveau</p>
             </div>
@@ -96,8 +102,11 @@
                 <p>Ménilmontant</p>
               </div>
               <div class="heart">
-                <i class="coeur1 far fa-heart"></i>
-                <i class="coeur2 fas fa-heart"></i>
+                <label>
+                  <input type="checkbox" name="" />
+                  <i class="coeur1 far fa-heart"></i>
+                  <i class="coeur2 fas fa-heart"></i>
+                </label>
               </div>
             </div>
           </a>
@@ -112,8 +121,11 @@
                 <p>Ménilmontant</p>
               </div>
               <div class="heart">
-                <i class="coeur1 far fa-heart"></i>
-                <i class="coeur2 fas fa-heart"></i>
+                <label>
+                  <input type="checkbox" name="" />
+                  <i class="coeur1 far fa-heart"></i>
+                  <i class="coeur2 fas fa-heart"></i>
+                </label>
               </div>
             </div>
           </a>
