--- a/template.html
+++ b/template.html
@@ -32,8 +32,11 @@
       <div class="title-restaurant">
         <h2>La palette du goût</h2>
         <div class="heart">
-          <i class="coeur1 far fa-heart"></i>
-          <i class="coeur2 fas fa-heart"></i>
+          <label>
+            <input type="checkbox" name="" />
+            <i class="coeur1 far fa-heart"></i>
+            <i class="coeur2 fas fa-heart"></i>
+          </label>
         </div>
       </div>
       <section id="starter" class="menu">
