--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <article>
         <h2>Restaurants</h2>
         <div class="cards">
-          <a class="card" href="template.html">
+          <a class="card" href="La palette du goût.html">
             <img
               src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
               alt="plan de table"
@@ -71,15 +71,15 @@
               <p class="stickers">Nouveau</p>
             </div>
           </a>
-          <a class="card" href="#">
+          <a class="card" href="La note enchantée.html">
             <img
               src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
               alt="plan de table"
             />
             <div class="card__description">
               <div class="left-description">
-                <h3>La palette du goût</h3>
-                <p>Ménilmontant</p>
+                <h3>La note enchantée</h3>
+                <p>Charonne</p>
               </div>
               <div class="heart">
                 <label>
@@ -91,15 +91,15 @@
               <p class="stickers">Nouveau</p>
             </div>
           </a>
-          <a class="card" href="#">
+          <a class="card" href="A la francaise.html">
             <img
               src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
               alt="plan de table"
             />
             <div class="card__description">
               <div class="left-description">
-                <h3>La palette du goût</h3>
-                <p>Ménilmontant</p>
+                <h3>À la française</h3>
+                <p>Cité Rouge</p>
               </div>
               <div class="heart">
                 <label>
@@ -110,15 +110,15 @@
               </div>
             </div>
           </a>
-          <a class="card" href="#">
+          <a class="card" href="Le délice des sens.html">
             <img
               src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
               alt="plan de table"
             />
             <div class="card__description">
               <div class="left-description">
-                <h3>La palette du goût</h3>
-                <p>Ménilmontant</p>
+                <h3>Le délice des sens</h3>
+                <p>Folie-Méricourt</p>
               </div>
               <div class="heart">
                 <label>
