ajout dossier html pages et modif css

--- a/Pages-html/la-palette-du-goût.html
+++ b/Pages-html/la-palette-du-goût.html
@@ -12,20 +12,20 @@
       src="https://kit.fontawesome.com/7818e12ab5.js"
       crossorigin="anonymous"
     ></script>
-    <title>Document2</title>
-    <link rel="stylesheet" href="style.css" />
+    <title>La palette du goût</title>
+    <link rel="stylesheet" href="../style.css" />
   </head>
   <body>
     <header>
       <h1>ohmyfood</h1>
-      <a href="index.html">
+      <a href="../index.html">
         <i class="fas fa-arrow-left fa-lg"></i>
       </a>
     </header>
     <div class="backround-image">
       <img
-        src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
-        alt="assiette poulet légumes"
+        src="../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+        alt="assiette poisson et salade"
       />
     </div>
     <main id="main-page2">
@@ -33,7 +33,7 @@
         <h2>La palette du goût</h2>
         <div class="heart">
           <label>
-            <input type="checkbox" name="" />
+            <input type="checkbox" name="fav" />
             <i class="coeur1 far fa-heart"></i>
             <i class="coeur2 fas fa-heart"></i>
           </label>
