--- a/Pages-html/a-la-francaise.html
+++ b/Pages-html/a-la-francaise.html
@@ -12,28 +12,28 @@
       src="https://kit.fontawesome.com/7818e12ab5.js"
       crossorigin="anonymous"
     ></script>
-    <title>Document2</title>
-    <link rel="stylesheet" href="style.css" />
+    <title>À la française</title>
+    <link rel="stylesheet" href="../style.css" />
   </head>
   <body>
     <header>
       <h1>ohmyfood</h1>
-      <a href="index.html">
+      <a href="../index.html">
         <i class="fas fa-arrow-left fa-lg"></i>
       </a>
     </header>
     <div class="backround-image">
       <img
-        src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
-        alt="assiette poulet légumes"
+        src="../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+        alt="assiette boule de glaces"
       />
     </div>
     <main id="main-page2">
       <div class="title-restaurant">
-        <h2>La palette du goût</h2>
+        <h2>À la française</h2>
         <div class="heart">
           <label>
-            <input type="checkbox" name="" />
+            <input type="checkbox" name="fav" />
             <i class="coeur1 far fa-heart"></i>
             <i class="coeur2 fas fa-heart"></i>
           </label>
@@ -43,8 +43,8 @@
         <h3 class="upercase">Entrées</h3>
         <div class="bloc-menu" id="meal-1">
           <div class="description-menu">
-            <p class="principal">Fricassée d'escargot</p>
-            <p>Au piment d'Espelette</p>
+            <p class="principal">Tartare de poulpe acidulé</p>
+            <p>Aux zestes d'orange</p>
           </div>
           <div class="price"><b>25€</b></div>
           <div class="validation">
@@ -53,8 +53,8 @@
         </div>
         <div class="bloc-menu" id="meal-2">
           <div class="description-menu">
-            <p class="principal">Foie gras de canard mi-cuit</p>
-            <p>Et ses copeaux de truffe noire</p>
+            <p class="principal">Velouté de légumes d'antan</p>
+            <p>Carotte, panais, topinambour</p>
           </div>
           <div class="price"><b>35€</b></div>
           <div class="validation">
@@ -63,8 +63,8 @@
         </div>
         <div class="bloc-menu" id="meal-3">
           <div class="description-menu">
-            <p class="principal">Oeuf au plat</p>
-            <p>Assaisonné à la truffe sur lit de caviar</p>
+            <p class="principal">Soupe à l'oignon</p>
+            <p>Revisitée</p>
           </div>
           <div class="price"><b>20€</b></div>
           <div class="validation">
@@ -76,8 +76,8 @@
         <h3 class="upercase">Plats</h3>
         <div class="bloc-menu" id="meal-4">
           <div class="description-menu">
-            <p class="principal">Filet de boeuf aux herbes</p>
-            <p>Accompagné de sa ribambelle de légumes</p>
+            <p class="principal">Coquilles Saint-Jacques</p>
+            <p>Accompagnées d'une purée de panais</p>
           </div>
           <div class="price"><b>40€</b></div>
           <div class="validation">
@@ -86,8 +86,8 @@
         </div>
         <div class="bloc-menu" id="meal-5">
           <div class="description-menu">
-            <p class="principal">Parmentier de queue de boeuf</p>
-            <p>À la truffe noire sur sa purée de panais</p>
+            <p class="principal">Magret de canard</p>
+            <p>Et parmentier de pommes de terre</p>
           </div>
           <div class="price"><b>35€</b></div>
           <div class="validation">
@@ -96,8 +96,8 @@
         </div>
         <div class="bloc-menu" id="meal-6">
           <div class="description-menu">
-            <p class="principal">Filet de turbot</p>
-            <p>Aux agrumes</p>
+            <p class="principal">Pigeonneau d’Ille-et-Vilaine</p>
+            <p>Sur son lit de gnocchis aux légumes</p>
           </div>
           <div class="price"><b>44€</b></div>
           <div class="validation">
@@ -109,8 +109,8 @@
         <h3 class="upercase">Desserts</h3>
         <div class="bloc-menu" id="meal-7">
           <div class="description-menu">
-            <p class="principal">Paris-Brest</p>
-            <p>Revisité</p>
+            <p class="principal">Pétales de violettes glacés</p>
+            <p>Et purée de noisettes</p>
           </div>
           <div class="price"><b>18€</b></div>
           <div class="validation">
@@ -119,8 +119,8 @@
         </div>
         <div class="bloc-menu" id="meal-8">
           <div class="description-menu">
-            <p class="principal">Macaron au chocolat d'exception</p>
-            <p>Et glace à la vanille de Madagascar</p>
+            <p class="principal">Fondant au chocolat</p>
+            <p>Revisité</p>
           </div>
           <div class="price"><b>22€</b></div>
           <div class="validation">
@@ -129,8 +129,8 @@
         </div>
         <div class="bloc-menu" id="meal-9">
           <div class="description-menu">
-            <p class="principal">Mousse au chocolat</p>
-            <p>Au piment d'Espelette et à la truffe noire</p>
+            <p class="principal">Millefeuille croustillant</p>
+            <p>Myrtilles et pâte d’amande</p>
           </div>
           <div class="price"><b>23€</b></div>
           <div class="validation">
