--- a/Pages-html/la-note-enchantée.html
+++ b/Pages-html/la-note-enchantée.html
@@ -13,38 +13,38 @@
       crossorigin="anonymous"
     ></script>
     <title>Document2</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../style.css" />
   </head>
   <body>
     <header>
       <h1>ohmyfood</h1>
-      <a href="index.html">
+      <a href="../index.html">
         <i class="fas fa-arrow-left fa-lg"></i>
       </a>
     </header>
     <div class="backround-image">
       <img
-        src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
-        alt="assiette poulet légumes"
+        src="../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+        alt="assiette fruits de mer"
       />
     </div>
     <main id="main-page2">
       <div class="title-restaurant">
-        <h2>La palette du goût</h2>
+        <h2>La note enchantée</h2>
         <div class="heart">
           <label>
-            <input type="checkbox" name="" />
+            <input type="checkbox" name="fav" />
             <i class="coeur1 far fa-heart"></i>
             <i class="coeur2 fas fa-heart"></i>
           </label>
         </div>
       </div>
-      <section class="menu">
+      <section id="starter" class="menu">
         <h3 class="upercase">Entrées</h3>
         <div class="bloc-menu" id="meal-1">
           <div class="description-menu">
-            <p class="principal">Fricassée d'escargot</p>
-            <p>Au piment d'Espelette</p>
+            <p class="principal">Ravioles de foie gras</p>
+            <p>Accompagnés de leur crème à la truffe</p>
           </div>
           <div class="price"><b>25€</b></div>
           <div class="validation">
@@ -53,8 +53,8 @@
         </div>
         <div class="bloc-menu" id="meal-2">
           <div class="description-menu">
-            <p class="principal">Foie gras de canard mi-cuit</p>
-            <p>Et ses copeaux de truffe noire</p>
+            <p class="principal">Caviar osciètre</p>
+            <p>Sur blini à la farine de blé noir</p>
           </div>
           <div class="price"><b>35€</b></div>
           <div class="validation">
@@ -63,10 +63,20 @@
         </div>
         <div class="bloc-menu" id="meal-3">
           <div class="description-menu">
-            <p class="principal">Oeuf au plat</p>
-            <p>Assaisonné à la truffe sur lit de caviar</p>
+            <p class="principal">Homard et espuma de potiron</p>
+            <p>Mariné aux zestes d'orange</p>
           </div>
           <div class="price"><b>20€</b></div>
+          <div class="validation">
+            <i class="fas fa-check-circle"></i>
+          </div>
+        </div>
+        <div class="bloc-menu" id="meal-4">
+          <div class="description-menu">
+            <p class="principal">Foie gras de canard cuit entier</p>
+            <p>Confiture de figue et pain toasté</p>
+          </div>
+          <div class="price"><b>35€</b></div>
           <div class="validation">
             <i class="fas fa-check-circle"></i>
           </div>
@@ -74,30 +84,30 @@
       </section>
       <section class="menu">
         <h3 class="upercase">Plats</h3>
-        <div class="bloc-menu" id="meal-4">
+        <div class="bloc-menu" id="meal-5">
           <div class="description-menu">
-            <p class="principal">Filet de boeuf aux herbes</p>
-            <p>Accompagné de sa ribambelle de légumes</p>
+            <p class="principal">Noix de coquilles Saint-Jacques</p>
+            <p>Sur lit de purée de céleri-rave</p>
           </div>
           <div class="price"><b>40€</b></div>
           <div class="validation">
             <i class="fas fa-check-circle"></i>
           </div>
         </div>
-        <div class="bloc-menu" id="meal-5">
+        <div class="bloc-menu" id="meal-6">
           <div class="description-menu">
-            <p class="principal">Parmentier de queue de boeuf</p>
-            <p>À la truffe noire sur sa purée de panais</p>
+            <p class="principal">Langoustine poêlée</p>
+            <p>Purée de patate douce</p>
           </div>
           <div class="price"><b>35€</b></div>
           <div class="validation">
             <i class="fas fa-check-circle"></i>
           </div>
         </div>
-        <div class="bloc-menu" id="meal-6">
+        <div class="bloc-menu" id="meal-7">
           <div class="description-menu">
-            <p class="principal">Filet de turbot</p>
-            <p>Aux agrumes</p>
+            <p class="principal">Mijoté de queue de boeuf</p>
+            <p>Et riz sauvage aux zestes de citron</p>
           </div>
           <div class="price"><b>44€</b></div>
           <div class="validation">
@@ -107,30 +117,30 @@
       </section>
       <section class="menu">
         <h3 class="upercase">Desserts</h3>
-        <div class="bloc-menu" id="meal-7">
+        <div class="bloc-menu" id="meal-8">
           <div class="description-menu">
-            <p class="principal">Paris-Brest</p>
-            <p>Revisité</p>
+            <p class="principal">Macaron noisette et chocolat</p>
+            <p>Glace au caramel brun et sel de Guérande</p>
           </div>
           <div class="price"><b>18€</b></div>
           <div class="validation">
             <i class="fas fa-check-circle"></i>
           </div>
         </div>
-        <div class="bloc-menu" id="meal-8">
+        <div class="bloc-menu" id="meal-9">
           <div class="description-menu">
-            <p class="principal">Macaron au chocolat d'exception</p>
-            <p>Et glace à la vanille de Madagascar</p>
+            <p class="principal">Baba au rhum revisité</p>
+            <p>Avec son coulis de citron</p>
           </div>
           <div class="price"><b>22€</b></div>
           <div class="validation">
             <i class="fas fa-check-circle"></i>
           </div>
         </div>
-        <div class="bloc-menu" id="meal-9">
+        <div class="bloc-menu" id="meal-10">
           <div class="description-menu">
-            <p class="principal">Mousse au chocolat</p>
-            <p>Au piment d'Espelette et à la truffe noire</p>
+            <p class="principal">Tarte au citron meringuée</p>
+            <p>Déstructurée</p>
           </div>
           <div class="price"><b>23€</b></div>
           <div class="validation">
