--- a/index.html
+++ b/index.html
@@ -51,84 +51,100 @@
       <article>
         <h2>Restaurants</h2>
         <div class="cards">
-          <a class="card" href="La palette du goût.html">
-            <img
-              src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
-              alt="plan de table"
-            />
-            <div class="card__description">
-              <div class="left-description">
-                <h3>La palette du goût</h3>
-                <p>Ménilmontant</p>
+          <div class="restaurant-fav">
+            <a class="card" href="./Pages-html/la-palette-du-goût.html">
+              <img
+                src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                alt="assiette poisson et salade"
+              />
+              <div class="card__description">
+                <div class="left-description">
+                  <h3>La palette du goût</h3>
+                  <p>Ménilmontant</p>
+                </div>
+                <p class="stickers">Nouveau</p>
               </div>
+            </a>
+            <div class="position-coeur">
               <div class="heart">
                 <label>
-                  <input type="checkbox" name="" />
-                  <i class="coeur1 far fa-heart"></i>
-                  <i class="coeur2 fas fa-heart"></i>
-                </label>
-              </div>
-              <p class="stickers">Nouveau</p>
-            </div>
-          </a>
-          <a class="card" href="La note enchantée.html">
-            <img
-              src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
-              alt="plan de table"
-            />
-            <div class="card__description">
-              <div class="left-description">
-                <h3>La note enchantée</h3>
-                <p>Charonne</p>
-              </div>
-              <div class="heart">
-                <label>
-                  <input type="checkbox" name="" />
-                  <i class="coeur1 far fa-heart"></i>
-                  <i class="coeur2 fas fa-heart"></i>
-                </label>
-              </div>
-              <p class="stickers">Nouveau</p>
-            </div>
-          </a>
-          <a class="card" href="A la francaise.html">
-            <img
-              src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
-              alt="plan de table"
-            />
-            <div class="card__description">
-              <div class="left-description">
-                <h3>À la française</h3>
-                <p>Cité Rouge</p>
-              </div>
-              <div class="heart">
-                <label>
-                  <input type="checkbox" name="" />
+                  <input type="checkbox" name="fav" />
                   <i class="coeur1 far fa-heart"></i>
                   <i class="coeur2 fas fa-heart"></i>
                 </label>
               </div>
             </div>
-          </a>
-          <a class="card" href="Le délice des sens.html">
-            <img
-              src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
-              alt="plan de table"
-            />
-            <div class="card__description">
-              <div class="left-description">
-                <h3>Le délice des sens</h3>
-                <p>Folie-Méricourt</p>
+          </div>
+          <div class="restaurant-fav">
+            <a class="card" href="./Pages-html/la-note-enchantée.html">
+              <img
+                src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+                alt="assiette poisson et salade"
+              />
+              <div class="card__description">
+                <div class="left-description">
+                  <h3>La note enchantée</h3>
+                  <p>Charonne</p>
+                </div>
+                <p class="stickers">Nouveau</p>
               </div>
+            </a>
+            <div class="position-coeur">
               <div class="heart">
                 <label>
-                  <input type="checkbox" name="" />
+                  <input type="checkbox" name="fav" />
                   <i class="coeur1 far fa-heart"></i>
                   <i class="coeur2 fas fa-heart"></i>
                 </label>
               </div>
             </div>
-          </a>
+          </div>
+          <div class="restaurant-fav">
+            <a class="card" href="./Pages-html/a-la-francaise.html">
+              <img
+                src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+                alt="assiette poisson et salade"
+              />
+              <div class="card__description">
+                <div class="left-description">
+                  <h3>À la française</h3>
+                  <p>Cité Rouge</p>
+                </div>
+              </div>
+            </a>
+            <div class="position-coeur">
+              <div class="heart">
+                <label>
+                  <input type="checkbox" name="fav" />
+                  <i class="coeur1 far fa-heart"></i>
+                  <i class="coeur2 fas fa-heart"></i>
+                </label>
+              </div>
+            </div>
+          </div>
+          <div class="restaurant-fav">
+            <a class="card" href="./Pages-html/le-délice-des-sens.html">
+              <img
+                src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                alt="assiette poisson et salade"
+              />
+              <div class="card__description">
+                <div class="left-description">
+                  <h3>Le délice des sens</h3>
+                  <p>Folie-Méricourt</p>
+                </div>
+              </div>
+            </a>
+            <div class="position-coeur">
+              <div class="heart">
+                <label>
+                  <input type="checkbox" name="fav" />
+                  <i class="coeur1 far fa-heart"></i>
+                  <i class="coeur2 fas fa-heart"></i>
+                </label>
+              </div>
+            </div>
+          </div>
         </div>
       </article>
     </main>
