--- a/Pages-html/a-la-francaise.html
+++ b/Pages-html/a-la-francaise.html
@@ -46,9 +46,11 @@
             <p class="principal">Tartare de poulpe acidulé</p>
             <p>Aux zestes d'orange</p>
           </div>
-          <div class="price"><b>25€</b></div>
-          <div class="validation">
-            <i class="fas fa-check-circle green"></i>
+          <div class="validation-price">
+            <div class="price"><b>25€</b></div>
+            <div class="validation">
+              <i class="fas fa-check-circle"></i>
+            </div>
           </div>
         </div>
         <div class="bloc-menu" id="meal-2">
@@ -56,9 +58,11 @@
             <p class="principal">Velouté de légumes d'antan</p>
             <p>Carotte, panais, topinambour</p>
           </div>
-          <div class="price"><b>35€</b></div>
-          <div class="validation">
-            <i class="fas fa-check-circle"></i>
+          <div class="validation-price">
+            <div class="price"><b>35€</b></div>
+            <div class="validation">
+              <i class="fas fa-check-circle"></i>
+            </div>
           </div>
         </div>
         <div class="bloc-menu" id="meal-3">
@@ -66,9 +70,11 @@
             <p class="principal">Soupe à l'oignon</p>
             <p>Revisitée</p>
           </div>
-          <div class="price"><b>20€</b></div>
-          <div class="validation">
-            <i class="fas fa-check-circle"></i>
+          <div class="validation-price">
+            <div class="price"><b>20€</b></div>
+            <div class="validation">
+              <i class="fas fa-check-circle"></i>
+            </div>
           </div>
         </div>
       </section>
@@ -79,9 +85,11 @@
             <p class="principal">Coquilles Saint-Jacques</p>
             <p>Accompagnées d'une purée de panais</p>
           </div>
-          <div class="price"><b>40€</b></div>
-          <div class="validation">
-            <i class="fas fa-check-circle"></i>
+          <div class="validation-price">
+            <div class="price"><b>40€</b></div>
+            <div class="validation">
+              <i class="fas fa-check-circle"></i>
+            </div>
           </div>
         </div>
         <div class="bloc-menu" id="meal-5">
@@ -89,9 +97,11 @@
             <p class="principal">Magret de canard</p>
             <p>Et parmentier de pommes de terre</p>
           </div>
-          <div class="price"><b>35€</b></div>
-          <div class="validation">
-            <i class="fas fa-check-circle"></i>
+          <div class="validation-price">
+            <div class="price"><b>35€</b></div>
+            <div class="validation">
+              <i class="fas fa-check-circle"></i>
+            </div>
           </div>
         </div>
         <div class="bloc-menu" id="meal-6">
@@ -99,9 +109,11 @@
             <p class="principal">Pigeonneau d’Ille-et-Vilaine</p>
             <p>Sur son lit de gnocchis aux légumes</p>
           </div>
-          <div class="price"><b>44€</b></div>
-          <div class="validation">
-            <i class="fas fa-check-circle"></i>
+          <div class="validation-price">
+            <div class="price"><b>44€</b></div>
+            <div class="validation">
+              <i class="fas fa-check-circle"></i>
+            </div>
           </div>
         </div>
       </section>
@@ -112,9 +124,11 @@
             <p class="principal">Pétales de violettes glacés</p>
             <p>Et purée de noisettes</p>
           </div>
-          <div class="price"><b>18€</b></div>
-          <div class="validation">
-            <i class="fas fa-check-circle"></i>
+          <div class="validation-price">
+            <div class="price"><b>18€</b></div>
+            <div class="validation">
+              <i class="fas fa-check-circle"></i>
+            </div>
           </div>
         </div>
         <div class="bloc-menu" id="meal-8">
@@ -122,9 +136,11 @@
             <p class="principal">Fondant au chocolat</p>
             <p>Revisité</p>
           </div>
-          <div class="price"><b>22€</b></div>
-          <div class="validation">
-            <i class="fas fa-check-circle"></i>
+          <div class="validation-price">
+            <div class="price"><b>22€</b></div>
+            <div class="validation">
+              <i class="fas fa-check-circle"></i>
+            </div>
           </div>
         </div>
         <div class="bloc-menu" id="meal-9">
@@ -132,9 +148,11 @@
             <p class="principal">Millefeuille croustillant</p>
             <p>Myrtilles et pâte d’amande</p>
           </div>
-          <div class="price"><b>23€</b></div>
-          <div class="validation">
-            <i class="fas fa-check-circle"></i>
+          <div class="validation-price">
+            <div class="price"><b>23€</b></div>
+            <div class="validation">
+              <i class="fas fa-check-circle"></i>
+            </div>
           </div>
         </div>
       </section>
