--- a/Pages-html/la-palette-du-goût.html
+++ b/Pages-html/la-palette-du-goût.html
@@ -46,9 +46,11 @@
             <p class="principal">Fricassée d'escargot</p>
             <p>Au piment d'Espelette</p>
           </div>
-          <div class="price"><b>25€</b></div>
-          <div class="validation">
-            <i class="fas fa-check-circle green"></i>
+          <div class="validation-price">
+            <div class="price"><b>25€</b></div>
+            <div class="validation">
+              <i class="fas fa-check-circle"></i>
+            </div>
           </div>
         </div>
         <div class="bloc-menu" id="meal-2">
@@ -56,9 +58,11 @@
             <p class="principal">Foie gras de canard mi-cuit</p>
             <p>Et ses copeaux de truffe noire</p>
           </div>
-          <div class="price"><b>35€</b></div>
-          <div class="validation">
-            <i class="fas fa-check-circle"></i>
+          <div class="validation-price">
+            <div class="price"><b>35€</b></div>
+            <div class="validation">
+              <i class="fas fa-check-circle"></i>
+            </div>
           </div>
         </div>
         <div class="bloc-menu" id="meal-3">
@@ -66,9 +70,11 @@
             <p class="principal">Oeuf au plat</p>
             <p>Assaisonné à la truffe sur lit de caviar</p>
           </div>
-          <div class="price"><b>20€</b></div>
-          <div class="validation">
-            <i class="fas fa-check-circle"></i>
+          <div class="validation-price">
+            <div class="price"><b>20€</b></div>
+            <div class="validation">
+              <i class="fas fa-check-circle"></i>
+            </div>
           </div>
         </div>
       </section>
@@ -79,9 +85,11 @@
             <p class="principal">Filet de boeuf aux herbes</p>
             <p>Accompagné de sa ribambelle de légumes</p>
           </div>
-          <div class="price"><b>40€</b></div>
-          <div class="validation">
-            <i class="fas fa-check-circle"></i>
+          <div class="validation-price">
+            <div class="price"><b>40€</b></div>
+            <div class="validation">
+              <i class="fas fa-check-circle"></i>
+            </div>
           </div>
         </div>
         <div class="bloc-menu" id="meal-5">
@@ -89,9 +97,11 @@
             <p class="principal">Parmentier de queue de boeuf</p>
             <p>À la truffe noire sur sa purée de panais</p>
           </div>
-          <div class="price"><b>35€</b></div>
-          <div class="validation">
-            <i class="fas fa-check-circle"></i>
+          <div class="validation-price">
+            <div class="price"><b>35€</b></div>
+            <div class="validation">
+              <i class="fas fa-check-circle"></i>
+            </div>
           </div>
         </div>
         <div class="bloc-menu" id="meal-6">
@@ -99,9 +109,11 @@
             <p class="principal">Filet de turbot</p>
             <p>Aux agrumes</p>
           </div>
-          <div class="price"><b>44€</b></div>
-          <div class="validation">
-            <i class="fas fa-check-circle"></i>
+          <div class="validation-price">
+            <div class="price"><b>44€</b></div>
+            <div class="validation">
+              <i class="fas fa-check-circle"></i>
+            </div>
           </div>
         </div>
       </section>
@@ -112,9 +124,11 @@
             <p class="principal">Paris-Brest</p>
             <p>Revisité</p>
           </div>
-          <div class="price"><b>18€</b></div>
-          <div class="validation">
-            <i class="fas fa-check-circle"></i>
+          <div class="validation-price">
+            <div class="price"><b>18€</b></div>
+            <div class="validation">
+              <i class="fas fa-check-circle"></i>
+            </div>
           </div>
         </div>
         <div class="bloc-menu" id="meal-8">
@@ -122,9 +136,11 @@
             <p class="principal">Macaron au chocolat d'exception</p>
             <p>Et glace à la vanille de Madagascar</p>
           </div>
-          <div class="price"><b>22€</b></div>
-          <div class="validation">
-            <i class="fas fa-check-circle"></i>
+          <div class="validation-price">
+            <div class="price"><b>22€</b></div>
+            <div class="validation">
+              <i class="fas fa-check-circle"></i>
+            </div>
           </div>
         </div>
         <div class="bloc-menu" id="meal-9">
@@ -132,9 +148,11 @@
             <p class="principal">Mousse au chocolat</p>
             <p>Au piment d'Espelette et à la truffe noire</p>
           </div>
-          <div class="price"><b>23€</b></div>
-          <div class="validation">
-            <i class="fas fa-check-circle"></i>
+          <div class="validation-price">
+            <div class="price"><b>23€</b></div>
+            <div class="validation">
+              <i class="fas fa-check-circle"></i>
+            </div>
           </div>
         </div>
       </section>
