--- a/Pages-html/la-note-enchantée.html
+++ b/Pages-html/la-note-enchantée.html
@@ -12,7 +12,7 @@
       src="https://kit.fontawesome.com/7818e12ab5.js"
       crossorigin="anonymous"
     ></script>
-    <title>Document2</title>
+    <title>La note enchantée</title>
     <link rel="stylesheet" href="../style.css" />
   </head>
   <body>
@@ -46,9 +46,11 @@
             <p class="principal">Ravioles de foie gras</p>
             <p>Accompagnés de leur crème à la truffe</p>
           </div>
-          <div class="price"><b>25€</b></div>
-          <div class="validation">
-            <i class="fas fa-check-circle green"></i>
+          <div class="validation-price">
+            <div class="price"><b>25€</b></div>
+            <div class="validation">
+              <i class="fas fa-check-circle"></i>
+            </div>
           </div>
         </div>
         <div class="bloc-menu" id="meal-2">
@@ -56,9 +58,11 @@
             <p class="principal">Caviar osciètre</p>
             <p>Sur blini à la farine de blé noir</p>
           </div>
-          <div class="price"><b>35€</b></div>
-          <div class="validation">
-            <i class="fas fa-check-circle"></i>
+          <div class="validation-price">
+            <div class="price"><b>35€</b></div>
+            <div class="validation">
+              <i class="fas fa-check-circle"></i>
+            </div>
           </div>
         </div>
         <div class="bloc-menu" id="meal-3">
@@ -66,9 +70,11 @@
             <p class="principal">Homard et espuma de potiron</p>
             <p>Mariné aux zestes d'orange</p>
           </div>
-          <div class="price"><b>20€</b></div>
-          <div class="validation">
-            <i class="fas fa-check-circle"></i>
+          <div class="validation-price">
+            <div class="price"><b>20€</b></div>
+            <div class="validation">
+              <i class="fas fa-check-circle"></i>
+            </div>
           </div>
         </div>
         <div class="bloc-menu" id="meal-4">
@@ -76,9 +82,11 @@
             <p class="principal">Foie gras de canard cuit entier</p>
             <p>Confiture de figue et pain toasté</p>
           </div>
-          <div class="price"><b>35€</b></div>
-          <div class="validation">
-            <i class="fas fa-check-circle"></i>
+          <div class="validation-price">
+            <div class="price"><b>35€</b></div>
+            <div class="validation">
+              <i class="fas fa-check-circle"></i>
+            </div>
           </div>
         </div>
       </section>
@@ -89,9 +97,11 @@
             <p class="principal">Noix de coquilles Saint-Jacques</p>
             <p>Sur lit de purée de céleri-rave</p>
           </div>
-          <div class="price"><b>40€</b></div>
-          <div class="validation">
-            <i class="fas fa-check-circle"></i>
+          <div class="validation-price">
+            <div class="price"><b>40€</b></div>
+            <div class="validation">
+              <i class="fas fa-check-circle"></i>
+            </div>
           </div>
         </div>
         <div class="bloc-menu" id="meal-6">
@@ -99,9 +109,11 @@
             <p class="principal">Langoustine poêlée</p>
             <p>Purée de patate douce</p>
           </div>
-          <div class="price"><b>35€</b></div>
-          <div class="validation">
-            <i class="fas fa-check-circle"></i>
+          <div class="validation-price">
+            <div class="price"><b>35€</b></div>
+            <div class="validation">
+              <i class="fas fa-check-circle"></i>
+            </div>
           </div>
         </div>
         <div class="bloc-menu" id="meal-7">
@@ -109,9 +121,11 @@
             <p class="principal">Mijoté de queue de boeuf</p>
             <p>Et riz sauvage aux zestes de citron</p>
           </div>
-          <div class="price"><b>44€</b></div>
-          <div class="validation">
-            <i class="fas fa-check-circle"></i>
+          <div class="validation-price">
+            <div class="price"><b>44€</b></div>
+            <div class="validation">
+              <i class="fas fa-check-circle"></i>
+            </div>
           </div>
         </div>
       </section>
@@ -122,9 +136,11 @@
             <p class="principal">Macaron noisette et chocolat</p>
             <p>Glace au caramel brun et sel de Guérande</p>
           </div>
-          <div class="price"><b>18€</b></div>
-          <div class="validation">
-            <i class="fas fa-check-circle"></i>
+          <div class="validation-price">
+            <div class="price"><b>18€</b></div>
+            <div class="validation">
+              <i class="fas fa-check-circle"></i>
+            </div>
           </div>
         </div>
         <div class="bloc-menu" id="meal-9">
@@ -132,9 +148,11 @@
             <p class="principal">Baba au rhum revisité</p>
             <p>Avec son coulis de citron</p>
           </div>
-          <div class="price"><b>22€</b></div>
-          <div class="validation">
-            <i class="fas fa-check-circle"></i>
+          <div class="validation-price">
+            <div class="price"><b>22€</b></div>
+            <div class="validation">
+              <i class="fas fa-check-circle"></i>
+            </div>
           </div>
         </div>
         <div class="bloc-menu" id="meal-10">
@@ -142,9 +160,11 @@
             <p class="principal">Tarte au citron meringuée</p>
             <p>Déstructurée</p>
           </div>
-          <div class="price"><b>23€</b></div>
-          <div class="validation">
-            <i class="fas fa-check-circle"></i>
+          <div class="validation-price">
+            <div class="price"><b>23€</b></div>
+            <div class="validation">
+              <i class="fas fa-check-circle"></i>
+            </div>
           </div>
         </div>
       </section>
