--- a/Pages-html/le-délice-des-sens.html
+++ b/Pages-html/le-délice-des-sens.html
@@ -46,9 +46,11 @@
             <p class="principal">Tartare de thon</p>
             <p>Assaisonné au yuzu</p>
           </div>
-          <div class="price"><b>25€</b></div>
-          <div class="validation">
-            <i class="fas fa-check-circle green"></i>
+          <div class="validation-price">
+            <div class="price"><b>25€</b></div>
+            <div class="validation">
+              <i class="fas fa-check-circle"></i>
+            </div>
           </div>
         </div>
         <div class="bloc-menu" id="meal-2">
@@ -56,9 +58,11 @@
             <p class="principal">Bouchée de homard croustillant</p>
             <p>Et sa farandole de petits légumes</p>
           </div>
-          <div class="price"><b>35€</b></div>
-          <div class="validation">
-            <i class="fas fa-check-circle"></i>
+          <div class="validation-price">
+            <div class="price"><b>35€</b></div>
+            <div class="validation">
+              <i class="fas fa-check-circle"></i>
+            </div>
           </div>
         </div>
         <div class="bloc-menu" id="meal-3">
@@ -66,9 +70,11 @@
             <p class="principal">Velouté de cèpes</p>
             <p>Aux truffes</p>
           </div>
-          <div class="price"><b>20€</b></div>
-          <div class="validation">
-            <i class="fas fa-check-circle"></i>
+          <div class="validation-price">
+            <div class="price"><b>20€</b></div>
+            <div class="validation">
+              <i class="fas fa-check-circle"></i>
+            </div>
           </div>
         </div>
       </section>
@@ -79,9 +85,11 @@
             <p class="principal">Poulet rôti aux herbes de Provence</p>
             <p>Et sa crème de truffe</p>
           </div>
-          <div class="price"><b>40€</b></div>
-          <div class="validation">
-            <i class="fas fa-check-circle"></i>
+          <div class="validation-price">
+            <div class="price"><b>40€</b></div>
+            <div class="validation">
+              <i class="fas fa-check-circle"></i>
+            </div>
           </div>
         </div>
         <div class="bloc-menu" id="meal-5">
@@ -89,9 +97,11 @@
             <p class="principal">Langouste rôtie</p>
             <p>Et ses légumes de saison</p>
           </div>
-          <div class="price"><b>35€</b></div>
-          <div class="validation">
-            <i class="fas fa-check-circle"></i>
+          <div class="validation-price">
+            <div class="price"><b>35€</b></div>
+            <div class="validation">
+              <i class="fas fa-check-circle"></i>
+            </div>
           </div>
         </div>
         <div class="bloc-menu" id="meal-6">
@@ -99,9 +109,11 @@
             <p class="principal">Côte de boeuf Angus</p>
             <p>Et sa purée de panais</p>
           </div>
-          <div class="price"><b>44€</b></div>
-          <div class="validation">
-            <i class="fas fa-check-circle"></i>
+          <div class="validation-price">
+            <div class="price"><b>44€</b></div>
+            <div class="validation">
+              <i class="fas fa-check-circle"></i>
+            </div>
           </div>
         </div>
       </section>
@@ -112,9 +124,11 @@
             <p class="principal">Farandole de desserts</p>
             <p>Du chef</p>
           </div>
-          <div class="price"><b>18€</b></div>
-          <div class="validation">
-            <i class="fas fa-check-circle"></i>
+          <div class="validation-price">
+            <div class="price"><b>18€</b></div>
+            <div class="validation">
+              <i class="fas fa-check-circle"></i>
+            </div>
           </div>
         </div>
         <div class="bloc-menu" id="meal-8">
@@ -122,9 +136,11 @@
             <p class="principal">Crème brulée</p>
             <p>Revisitée</p>
           </div>
-          <div class="price"><b>22€</b></div>
-          <div class="validation">
-            <i class="fas fa-check-circle"></i>
+          <div class="validation-price">
+            <div class="price"><b>22€</b></div>
+            <div class="validation">
+              <i class="fas fa-check-circle"></i>
+            </div>
           </div>
         </div>
         <div class="bloc-menu" id="meal-9">
@@ -132,9 +148,11 @@
             <p class="principal">Tiramisu</p>
             <p>À la noisette</p>
           </div>
-          <div class="price"><b>23€</b></div>
-          <div class="validation">
-            <i class="fas fa-check-circle"></i>
+          <div class="validation-price">
+            <div class="price"><b>23€</b></div>
+            <div class="validation">
+              <i class="fas fa-check-circle"></i>
+            </div>
           </div>
         </div>
       </section>
