--- a/Pages-html/la-note-enchantée.html
+++ b/Pages-html/la-note-enchantée.html
@@ -170,22 +170,24 @@
     </main>
     <footer>
       <h3>ohmyfood</h3>
-      <ul>
-        <li>
-          <a href="#">
-            <i class="fas fa-utensils fa-ms"></i>
-            Proposer un restaurant
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <i class="fas fa-hands-helping fa-rotate-45"></i>
-            Devenir partenaire
-          </a>
-        </li>
-        <li><a href="#">Mentions Légales</a></li>
-        <li><a href="mailto:">Contact</a></li>
-      </ul>
+      <nav>
+        <ul>
+          <li>
+            <a href="#">
+              <i class="fas fa-utensils fa-ms"></i>
+              Proposer un restaurant
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <i class="fas fa-hands-helping fa-rotate-45"></i>
+              Devenir partenaire
+            </a>
+          </li>
+          <li><a href="#">Mentions Légales</a></li>
+          <li><a href="mailto:">Contact</a></li>
+        </ul>
+      </nav>
     </footer>
   </body>
 </html>
